# AI-Smart-Advisor-to-Automate-Control-of-a-Million-Dollar-Printing-Press

./: .gitignore  .pre-commit-config.yaml  2step_rule.py  Caddyfile  Dockerfile.dev  Dockerfile.frontend  README.md  all_tables.py  benchmark_results-multimodel.json  benchmark_results.json  cbExtract.py  deploy.sh  docker-compose.yml  dockerfile  extract.py  extract_benchmark.py  filter.py  filterup.py  filterupSide.py  final_rule.py  hybridRAG.py  hybridRAGStreamlit.py  hybridRAGStreamlit_all.py  hybridRAG_all_se.py  intermediate.py  ldeploy.sh  llama32RAG.ipynb  main.py  nginx-frontend.conf  outputExtract.json  pdf2imageSample.py  pyExtract.py  pyproject.toml  requirements.txt  run  test34_p_llm.py  test34_w_python.py  testClient.py  testReportChatbot.py  trial.py  (+2 more)
Frontend/: .env.development  .env.production  package-lock.json  package.json
Frontend/src/: App.css  App.js
Frontend/src/components/: ChatBot.css  ChatBot.js  QueryInterface.js
config/: __init__.py  config.py  settings.py
constants/: constants.py
lib/: __init__.py  document_scorer.py  hybrid_retriever.py  query_processor.py  rag_engine.py  utils.py  vector_db.py
log/: __init__.py  logger.py
mcp_server/: main.py  mainWeb.py
mcp_server/config/: __init__.py  settings.py
mcp_server/core/: __init__.py  router.py
mcp_server/server/: __init__.py  server.py
mcp_server/tools/: __init__.py  document_tools.py  eventRetrival_tools.py  generalKnowledge_tools.py  ruleset_tools.py
mcp_server/workflows/: __init__.py  workflows.py
storage/: split_pages.pkl
storage/vector_store/: chroma.sqlite3
(+2 files in other folders)
