[project]
name = "ai-smart-advisor-to-automate-control-of-a-million-dollar-printing-press"
version = "0.1.0"
description = "MCP Server for document search and ruleset evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.3.58",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.1",
    "langsmith>=0.3.42",
    "lxml>=5.4.0",
    "mcp[cli]>=1.7.1",
    "pandas>=2.2.3",
]
