[project]
name = "ai-smart-advisor-to-automate-control-of-a-million-dollar-printing-press"
version = "0.1.0"
description = "MCP Server for document search and ruleset evaluation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.6.3",
    "fastapi>=0.115.12",
    "grandalf>=0.8",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.58",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.1",
    "langsmith>=0.3.42",
    "lxml>=5.4.0",
    "mcp[cli]>=1.7.1",
    "pandas>=2.2.3",
    "pypdf2>=3.0.1",
    "streamlit>=1.45.1",
]
